[package]
name = "tonic-h3-example"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.14", default-features = false, features = ["router", "codegen", "transport"] }
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
tokio-macros = { version = "0.2.0-alpha.6" }
tokio-util = "0.7"
anyhow = "1"
argh = "0.1.10"
async-trait = "0.1.89"
http = "1"
rand = "0.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
tempfile = "3.10.1"
tonic-h3 = { git = "https://github.com/masa-koz/tonic-h3", rev = "e4f4d9ee7a814ff65e2ee2dac5866c4b80b0dcf5", default-features = false, features = ["msquic-async"] }
h3-masque = { git = "https://github.com/masa-koz/h3-masque", rev = "f99b950290a16708c67b668057edf4e24d642221" }
[build-dependencies]
tonic-prost-build = "0.14"
